tried to fix the view bug but couldnt but all the other code is in line

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,7 @@
                             <div class="col-xs-6 col-md-2">
                                 <div class="panel panel-default">
                                     <div class="panel-body">
-                                        <img src="https://png.icons8.com/ios/1600/add.png">
+                                        <img src="https://cdn2.iconfinder.com/data/icons/transparent-round-icons/512/add.png">
                                     </div>
                                     <div class="panel-footer">
                                         New pokemon
@@ -39,7 +39,7 @@
                         </a>
 
                         <% pokemon.pokemon.forEach(function(poke){ %>
-                            <a href="/view/<%-poke.id %>">
+                            <a href="/views/<%-poke.id %>">
                                 <div class="col-xs-6 col-md-2">
                                     <div class="panel panel-default">
                                         <div class="panel-body">
